--- a/cog.yaml
+++ b/cog.yaml
@@ -3,8 +3,9 @@ build:
   system_packages:
     - "libgl1-mesa-glx"
     - "libglib2.0-0"
+    - "blender"
   python_version: "3.11"
   python_packages:
-    - "pillow"
+    - "blendersynth"
 
 predict: "predict.py:Predictor"
