--- a/cog.yaml
+++ b/cog.yaml
@@ -1,11 +1,11 @@
 build:
-  gpu: false
+  gpu: true
   system_packages:
     - "libgl1-mesa-glx"
     - "libglib2.0-0"
     - "blender"
-  python_version: "3.11"
+  python_version: "3.7"
   python_packages:
-    - "blendersynth"
+    - "bpy"
 
 predict: "predict.py:Predictor"
