--- a/cog.yaml
+++ b/cog.yaml
@@ -3,9 +3,32 @@ build:
   system_packages:
     - "libgl1-mesa-glx"
     - "libglib2.0-0"
-    - "blender"
-  python_version: "3.11"
+    - "libsm6"
+    - "libxrender1"
+    - "libfontconfig1"
+    - "nvidia-container-toolkit"
+    - "libpystring-dev"
+    - "wget" 
+    - "libopenexr-dev"
+    - "bzip2"
+    - "build-essential"
+    - "zlib1g-dev"
+    - "libxmu-dev"
+    - "libxi-dev"
+    - "libxxf86vm-dev"
+    - "libfontconfig1"
+    - "libxrender1"
+    - "libgl1-mesa-glx"
+    - "xz-utils"
+    - "unzip"
+    - "libxkbcommon-x11-0"
+  python_version: "3.10"
   python_packages:
-    - "blendersynth"
-
+    - "git+https://github.com/V-Sekai/BlenderSynth.git#egg=blendersynth"
+    - "imageio==2.9.0"
+  run:
+    - "curl -L https://mirrors.ocf.berkeley.edu/blender/release/Blender3.6/blender-3.6.1-linux-x64.tar.xz | tar -xJf - && mv blender-3.6.1-linux-x64 /opt/blender && ln -s /opt/blender/blender /usr/bin/blender"
+    - "/usr/bin/blender --version"
 predict: "predict.py:Predictor"
+
+
